--- a/src/main/resources/view/fxml/GameWindow.fxml
+++ b/src/main/resources/view/fxml/GameWindow.fxml
@@ -81,5 +81,41 @@
             <Insets left="15.0" top="15.0" />
          </GridPane.margin>
       </FontAwesomeIconView>
+      <Label fx:id="_rightFeedbackLabel" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+         <font>
+            <Font size="25.0" />
+         </font>
+         <GridPane.margin>
+            <Insets right="80.0" />
+         </GridPane.margin>
+      </Label>
+      <Label fx:id="_leftFeedbackLabel" GridPane.halignment="LEFT" GridPane.rowIndex="1">
+         <font>
+            <Font size="25.0" />
+         </font>
+         <GridPane.margin>
+            <Insets left="80.0" />
+         </GridPane.margin>
+      </Label>
+      <FontAwesomeIconView fx:id="_leftIncorrectFeedbackIcon" fill="WHITE" glyphName="EXCLAMATION" size="40" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+         <GridPane.margin>
+            <Insets left="50.0" />
+         </GridPane.margin>
+      </FontAwesomeIconView>
+      <FontAwesomeIconView fx:id="_rightIncorrectFeedbackIcon" fill="WHITE" glyphName="EXCLAMATION" size="40" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+         <GridPane.margin>
+            <Insets right="50.0" />
+         </GridPane.margin>
+      </FontAwesomeIconView>
+      <FontAwesomeIconView fx:id="_leftCorrectFeedbackIcon" fill="WHITE" glyphName="THUMBS_UP" size="40" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+         <GridPane.margin>
+            <Insets left="40.0" />
+         </GridPane.margin>
+      </FontAwesomeIconView>
+      <FontAwesomeIconView fx:id="_rightCorrectFeedbackIcon" fill="WHITE" glyphName="THUMBS_UP" size="40" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+         <GridPane.margin>
+            <Insets right="40.0" />
+         </GridPane.margin>
+      </FontAwesomeIconView>
    </children>
 </GridPane>
