--- a/src/main/resources/view/fxml/TeacherInputWindow.fxml
+++ b/src/main/resources/view/fxml/TeacherInputWindow.fxml
@@ -11,11 +11,11 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#onKeyPress" prefHeight="400.0" prefWidth="600.0" stylesheets="@../stylesheets/TataiTheme.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.controllers.TeacherInputWindowController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#onKeyPress" prefHeight="500.0" prefWidth="800.0" stylesheets="@../stylesheets/TataiTheme.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.controllers.TeacherInputWindowController">
   <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" />
-    <ColumnConstraints hgrow="SOMETIMES" />
-      <ColumnConstraints hgrow="SOMETIMES" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="122.0" minWidth="74.0" prefWidth="118.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="645.0" minWidth="539.0" prefWidth="548.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="148.0" minWidth="51.0" prefWidth="133.0" />
   </columnConstraints>
   <rowConstraints>
     <RowConstraints vgrow="SOMETIMES" />
@@ -169,7 +169,10 @@
                   <Font size="36.0" />
                </font>
             </JFXButton>
-            <Label fx:id="_questionNoLabel" text="Label" textFill="WHITE" GridPane.rowIndex="2" />
+            <Label fx:id="_questionNoLabel" text="Label" textFill="WHITE" GridPane.rowIndex="2">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets></Label>
          </children>
       </GridPane>
       <Label fx:id="_inputLabel" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER">
@@ -187,5 +190,6 @@
             <Insets left="15.0" top="15.0" />
          </GridPane.margin>
       </FontAwesomeIconView>
+      <JFXButton fx:id="_submitButton" buttonType="RAISED" onAction="#handleExitClick" prefHeight="50.0" prefWidth="100.0" text="Submit" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
    </children>
 </GridPane>
