personal best notification

--- a/src/main/resources/view/stylesheets/TataiTheme.css
+++ b/src/main/resources/view/stylesheets/TataiTheme.css
@@ -154,3 +154,6 @@
 .text-area .scroll-bar:vertical:disabled {
     -fx-opacity: 0;
 }
+.text-correct-green {
+	-fx-text-fill: 00d10a !important;
+}
