--- a/src/main/resources/view/fxml/ResultsWindow.fxml
+++ b/src/main/resources/view/fxml/ResultsWindow.fxml
@@ -21,7 +21,7 @@
       <RowConstraints maxHeight="335.0" minHeight="10.0" prefHeight="77.0" vgrow="SOMETIMES" />
    </rowConstraints>
    <children>
-      <Label fx:id="_scoreLabel" alignment="CENTER" contentDisplay="CENTER" textAlignment="CENTER" textFill="WHITE" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+      <Label fx:id="_scoreLabel" alignment="CENTER" contentDisplay="CENTER" text="YOU GOT 10/10" textAlignment="CENTER" textFill="WHITE" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
          <font>
             <Font size="40.0" />
          </font>
@@ -56,5 +56,13 @@
             <JFXButton fx:id="_level2Button" buttonType="RAISED" onAction="#handleLevel2ButtonClick" prefHeight="50.0" prefWidth="100.0" text="Play Level 2" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
          </children>
       </GridPane>
+      <Label fx:id="_personalBestLabel" alignment="CENTER" contentDisplay="CENTER" text="Congratulations! A new personal best!" textAlignment="CENTER" textFill="WHITE" visible="false" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM">
+         <font>
+            <Font size="20.0" />
+         </font>
+         <effect>
+            <DropShadow blurType="ONE_PASS_BOX" />
+         </effect>
+      </Label>
    </children>
 </GridPane>
