--- a/src/main/resources/view/fxml/UserWindow.fxml
+++ b/src/main/resources/view/fxml/UserWindow.fxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXListView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -80,14 +80,16 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <ListView fx:id="_userList1" onKeyPressed="#handleKeyPress" onMouseClicked="#handleListClick" onMousePressed="#handleListClick" onMouseReleased="#handleListClick" prefHeight="314.0" prefWidth="400.0">
+            <JFXListView fx:id="_userList1" onKeyPressed="#handleKeyPress" onMouseClicked="#handleListClick">
                <GridPane.margin>
                   <Insets top="40.0" />
-               </GridPane.margin></ListView>
-            <ListView fx:id="_userList2" onKeyPressed="#handleKeyPress" onMouseClicked="#handleListClick" onMousePressed="#handleListClick" onMouseReleased="#handleListClick" prefHeight="200.0" prefWidth="200.0" stylesheets="@../stylesheets/TataiTheme.css" GridPane.columnIndex="1">
+               </GridPane.margin>
+            </JFXListView>
+            <JFXListView fx:id="_userList2" onKeyPressed="#handleKeyPress" onMouseClicked="#handleListClick" GridPane.columnIndex="1">
                <GridPane.margin>
                   <Insets top="40.0" />
-               </GridPane.margin></ListView>
+               </GridPane.margin>
+            </JFXListView>
          </children>
       </GridPane>
    </children>
