updated reverse mode button css

--- a/src/main/resources/view/fxml/ReverseGamemodeWindow.fxml
+++ b/src/main/resources/view/fxml/ReverseGamemodeWindow.fxml
@@ -37,7 +37,7 @@
             <RowConstraints vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <JFXButton fx:id="_0" buttonType="RAISED" onAction="#handle0Click" prefHeight="80.0" prefWidth="80.0" text="0" GridPane.halignment="CENTER">
+            <JFXButton fx:id="_0" buttonType="RAISED" onAction="#handle0Click" prefHeight="80.0" prefWidth="80.0" styleClass="reverse-button" text="0" GridPane.halignment="CENTER">
                <font>
                   <Font size="40.0" />
                </font>
@@ -45,7 +45,7 @@
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </JFXButton>
-            <JFXButton fx:id="_1" buttonType="RAISED" onAction="#handle1Click" prefHeight="80.0" prefWidth="80.0" text="1" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+            <JFXButton fx:id="_1" buttonType="RAISED" onAction="#handle1Click" prefHeight="80.0" prefWidth="80.0" styleClass="reverse-button" text="1" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                <font>
                   <Font size="40.0" />
                </font>
@@ -53,7 +53,7 @@
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </JFXButton>
-            <JFXButton fx:id="_2" buttonType="RAISED" onAction="#handle2Click" prefHeight="80.0" prefWidth="80.0" text="2" GridPane.columnIndex="2" GridPane.halignment="CENTER">
+            <JFXButton fx:id="_2" buttonType="RAISED" onAction="#handle2Click" prefHeight="80.0" prefWidth="80.0" styleClass="reverse-button" text="2" GridPane.columnIndex="2" GridPane.halignment="CENTER">
                <font>
                   <Font size="40.0" />
                </font>
@@ -61,7 +61,7 @@
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </JFXButton>
-            <JFXButton fx:id="_3" buttonType="RAISED" onAction="#handle3Click" prefHeight="80.0" prefWidth="80.0" text="3" GridPane.columnIndex="3" GridPane.halignment="CENTER">
+            <JFXButton fx:id="_3" buttonType="RAISED" onAction="#handle3Click" prefHeight="80.0" prefWidth="80.0" styleClass="reverse-button" text="3" GridPane.columnIndex="3" GridPane.halignment="CENTER">
                <font>
                   <Font size="40.0" />
                </font>
@@ -69,7 +69,7 @@
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </JFXButton>
-            <JFXButton fx:id="_4" buttonType="RAISED" onAction="#handle4Click" prefHeight="80.0" prefWidth="80.0" text="4" GridPane.columnIndex="4" GridPane.halignment="CENTER">
+            <JFXButton fx:id="_4" buttonType="RAISED" onAction="#handle4Click" prefHeight="80.0" prefWidth="80.0" styleClass="reverse-button" text="4" GridPane.columnIndex="4" GridPane.halignment="CENTER">
                <font>
                   <Font size="40.0" />
                </font>
@@ -77,7 +77,7 @@
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </JFXButton>
-            <JFXButton fx:id="_5" buttonType="RAISED" onAction="#handle5Click" prefHeight="80.0" prefWidth="80.0" text="5" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+            <JFXButton fx:id="_5" buttonType="RAISED" onAction="#handle5Click" prefHeight="80.0" prefWidth="80.0" styleClass="reverse-button" text="5" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                <font>
                   <Font size="40.0" />
                </font>
@@ -85,7 +85,7 @@
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </JFXButton>
-            <JFXButton fx:id="_6" buttonType="RAISED" onAction="#handle6Click" prefHeight="80.0" prefWidth="80.0" text="6" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+            <JFXButton fx:id="_6" buttonType="RAISED" onAction="#handle6Click" prefHeight="80.0" prefWidth="80.0" styleClass="reverse-button" text="6" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                <font>
                   <Font size="40.0" />
                </font>
@@ -93,7 +93,7 @@
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </JFXButton>
-            <JFXButton fx:id="_7" buttonType="RAISED" onAction="#handle7Click" prefHeight="80.0" prefWidth="80.0" text="7" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+            <JFXButton fx:id="_7" buttonType="RAISED" onAction="#handle7Click" prefHeight="80.0" prefWidth="80.0" styleClass="reverse-button" text="7" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                <font>
                   <Font size="40.0" />
                </font>
@@ -101,7 +101,7 @@
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </JFXButton>
-            <JFXButton fx:id="_8" buttonType="RAISED" onAction="#handle8Click" prefHeight="80.0" prefWidth="80.0" text="8" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+            <JFXButton fx:id="_8" buttonType="RAISED" onAction="#handle8Click" prefHeight="80.0" prefWidth="80.0" styleClass="reverse-button" text="8" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                <font>
                   <Font size="40.0" />
                </font>
@@ -109,7 +109,7 @@
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </JFXButton>
-            <JFXButton fx:id="_9" buttonType="RAISED" onAction="#handle9Click" prefHeight="80.0" prefWidth="80.0" text="9" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+            <JFXButton fx:id="_9" buttonType="RAISED" onAction="#handle9Click" prefHeight="80.0" prefWidth="80.0" styleClass="reverse-button" text="9" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                <font>
                   <Font size="40.0" />
                </font>
@@ -117,7 +117,7 @@
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </JFXButton>
-            <JFXButton fx:id="_clearButton" buttonType="RAISED" onAction="#handleDeleteClick" prefHeight="80.0" prefWidth="95.0" text="Clear" GridPane.columnIndex="6" GridPane.halignment="RIGHT">
+            <JFXButton fx:id="_clearButton" buttonType="RAISED" onAction="#handleDeleteClick" prefHeight="80.0" prefWidth="95.0" styleClass="reverse-button" text="Clear" GridPane.columnIndex="6" GridPane.halignment="RIGHT">
                <font>
                   <Font size="20.0" />
                </font>
@@ -125,7 +125,7 @@
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </JFXButton>
-            <JFXButton fx:id="_submitButton" buttonType="RAISED" onAction="#handlesubmitClick" prefHeight="80.0" prefWidth="95.0" text="Submit" GridPane.columnIndex="6" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+            <JFXButton fx:id="_submitButton" buttonType="RAISED" onAction="#handlesubmitClick" prefHeight="80.0" prefWidth="95.0" styleClass="reverse-button" text="Submit" GridPane.columnIndex="6" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                <font>
                   <Font size="16.0" />
                </font>
@@ -159,7 +159,7 @@
             <Insets top="15.0" />
          </GridPane.margin>
       </Label>
-      <FontAwesomeIconView fx:id="_hearButton" fill="WHITE" glyphName="VOLUME_UP" onMouseClicked="#handleHearClick" size="30" styleClass="icon-standard-clickable" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.valignment="BOTTOM">
+      <FontAwesomeIconView fx:id="_hearButton" fill="WHITE" glyphName="VOLUME_UP" onMouseClicked="#handleHearClick" size="30" styleClass="reverse-icon" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.valignment="BOTTOM">
          <GridPane.margin>
             <Insets bottom="50.0" />
          </GridPane.margin></FontAwesomeIconView>
